# libiris-integration-tests

./: Cargo.toml  README.md
src/: 01_spawn_worker.rs  access_files_worker.rs  common.rs  environment_vars_sanitized_worker.rs  inherited_resources_sanitized_worker.rs
src/unix/: common.rs
src/windows/: common.rs
src/workers/: inherited_dup_handles.rs  inherited_resources_detects_leak.rs  inherited_resources_sanitized.rs  spawn.rs  stdout_stderr.rs
tests/: 01_spawn_broker.rs  access_files.rs  access_files_broker.rs  common.rs  environment_vars_sanitized.rs  environment_vars_sanitized_broker.rs  failed_execve_reports_to_parent.rs  inherited_dup_handles.rs  inherited_dup_handles_broker.rs  inherited_resources_detects_leak.rs  inherited_resources_sanitized.rs  inherited_resources_sanitized_broker.rs  spawn.rs  spawn_broker.rs  stdout_stderr.rs
