[package]
name = "iris-integration-tests"
version = "0.1.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2018"

[dependencies]
iris = { path = "../libiris" }
libc = "0.2"

[[bin]]
name = "spawn_worker"
path = "src/spawn_worker.rs"

[[bin]]
name = "environment_vars_sanitized_worker"
path = "src/environment_vars_sanitized_worker.rs"

[[bin]]
name = "inherited_resources_sanitized_worker"
path = "src/inherited_resources_sanitized_worker.rs"

