[package]
name = "iris-integration-tests"
version = "0.1.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2018"

[dependencies]
iris = { path = "../libiris-core" }
libc = "0.2"
winapi = { version = "0.3.9", features = ["fileapi", "handleapi"] }

[[bin]]
name = "spawn_worker"
path = "src/spawn_worker.rs"

[[bin]]
name = "environment_vars_sanitized_worker"
path = "src/environment_vars_sanitized_worker.rs"

[[bin]]
name = "inherited_resources_sanitized_worker"
path = "src/inherited_resources_sanitized_worker.rs"

[[bin]]
name = "inherited_dup_handles_worker"
path = "src/inherited_dup_handles_worker.rs"

[[bin]]
name = "stdout_stderr_worker"
path = "src/stdout_stderr_worker.rs"

[[bin]]
name = "access_files_worker"
path = "src/access_files_worker.rs"

